--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
-# Object file
+# Keil Generated output files in the sub-directories .\Listings and .\Objects
+*.lst
 *.o
+*.d
+*.crf
+*.lnp
+*.axf
+*.htm
+*.build_log.htm
+*.dep
+*.iex
+*.i
+*.bin
+*.hex
+SI/
+project/
 
-# Ada Library Information
-*.ali
+#Keil Project screen layout file
+*.uvguix.*
+*.uvgui.*
+
+#JLINK file
+JLinkLog.txt
