--- a/HEU_LTTLT_PRO/MDK-ARM/HEU_ARM_PRO.uvprojx
+++ b/HEU_LTTLT_PRO/MDK-ARM/HEU_ARM_PRO.uvprojx
@@ -2066,6 +2066,11 @@
               <FileType>1</FileType>
               <FilePath>..\USER\RTOS_TASK\rope_task.c</FilePath>
             </File>
+            <File>
+              <FileName>imu_task.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\RTOS_TASK\imu_task.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
